# chachingAI

./: .gitignore  README.md  intelligent_nba_same_game_parlay_engine_product_spec.md  pyproject.toml
config/: injury_status_map.json
docs/: api_schema.md  data_pipeline.md  ui_framework.md
scripts/: api_server.py  backtest_props.py  build_injury_adjustments.py  build_parlay.py  download_historical_odds.py  find_ev_props.py  merge_injury_adjustments.py  price_live_parlay.py  sync_bdl_cache.py  sync_bdl_injuries.py
src/sgp_engine/: __init__.py  feature_engineering.py  matching.py  modeling.py  odds.py  pace.py  pipeline.py  simulation.py
src/sgp_engine/ingestion/: __init__.py  balldontlie.py  basketball_reference.py  kaggle_nba.py  nba_stats.py  odds_api.py
tests/: test_download_historical_odds.py  test_modeling.py  test_pipeline.py  test_simulation.py
ui/: README.md  app.js  config.js  index.html  mock_data.json  styles.css
