[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgp-engine"
version = "0.1.0"
description = "Intelligent NBA Same Game Parlay modeling utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]
