[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgp-engine"
version = "0.2.0"
description = "Intelligent NBA Same Game Parlay modeling utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "basketball-reference-scraper>=0.5",
  "numpy>=1.24",
  "pandas>=2.0",
  "requests>=2.31",
  "scipy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]
